[gd_scene load_steps=8 format=1]

[ext_resource path="res://Elements/Tower.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Tower.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/ScrapSelectionMenuItemMissile.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/ScrapSelectionMenuItemLaser.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/ScrapSelectionMenuItemShield.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/ScrapSelectionMenuItemWings.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 75.322, 199.25 )

[node name="Tower" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="MissileIcon" type="Sprite" parent="."]

transform/pos = Vector2( -50, -150 )
texture = ExtResource( 3 )

[node name="LaserIcon" type="Sprite" parent="."]

transform/pos = Vector2( -50, -99.2926 )
texture = ExtResource( 4 )

[node name="ShieldIcon" type="Sprite" parent="."]

transform/pos = Vector2( -50, -50 )
texture = ExtResource( 5 )

[node name="WingsIcon" type="Sprite" parent="."]

transform/pos = Vector2( -50, 0 )
texture = ExtResource( 6 )

[node name="MissileLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -40.0
margin/top = -150.0
margin/right = 0.0
margin/bottom = -136.0
text = "x0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LaserLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -40.0
margin/top = -100.0
margin/right = 0.0
margin/bottom = -86.0
text = "x0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ShieldLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -40.0
margin/top = -50.0
margin/right = 0.0
margin/bottom = -36.0
text = "x0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WingsLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -40.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 14.0
text = "x0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


